5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1723_2498.log
== TEST (2019-05-09 10:46:41) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = int(input("percentual de crescimento a: "))
pb = int(input("percentual de crescimento b: "))
t = 0
while(a!=b):
	a = a+a*pa
	y = b+b*pb
	t = t+1
print(t)
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pa = int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:47:48) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a!=b):
	a = a+a*pa
	y = b+b*pb
	t = t+1
print(t)
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pa = int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:48:29) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a!=b):
	a = a+a*pa
	y = b+b*pb
	t = t+1
print(t)
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    pa = int(input())
ValueError: invalid literal for int() with base 10: '35.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:49:15) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a!=b):
	a = a+a*pa
	b = b+b*pb
	t = t+1
print(t)
	
	
	

-- OUTPUT:
286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:50:36) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a!=b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
6976
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:53:21) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x!=y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
6976
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:53:58) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x==y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
6976
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:59) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x!=y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
6976
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:57:26) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(x>=y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(x>=y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:58:15) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x>=y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- EXECUTION TIME:
0.132315
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
0
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
0
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:58:17) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x>=y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(x>=y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:58:30) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x<y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:29) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a<b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:59:55) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a<b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:00:06) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a<b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:00:31) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a<b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- EXECUTION TIME:
0.447941
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:05:01) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
x = a
y = b
t = 0
while(x<y):
	x = x+a*(pa/100)
	y = y+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- EXECUTION TIME:
0.170865
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
12
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:21:45) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a<b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:22:43) 
-- CODE:
a = int(input("habitantes A: "))
b = int(input("habitantes B: "))
pa = float(input("percentual de crescimento a: "))
pb = float(input("percentual de crescimento b: "))
t = 0
while(a<b):
	a = a+a*(pa/100)
	b = b+b*(pb/100)
	t = t+1
print(t)
	
	
	

-- EXECUTION TIME:
0.215649
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
